# beaker-kernel

./: .bumpversion.cfg  .dockerignore  .gitignore  ARCHYTAS_TO_LANGGRAPH_MIGRATION.md  DEFINITIONS.md  Dockerfile  Dockerfile.julia  Dockerfile.r  LICENSE.txt  Makefile  README.md  beaker_config_sample.py  dev.py  docker-bake.hcl  docker-compose.server.yaml  docker-compose.yaml  env.example  hatch_build.py  jupyter_kernel_proxy.py  main.py  package-lock.json  pyproject.toml
.github/workflows/: beaker-vue-type-check.yaml  beaker_kernel_python_tests.yaml  build-publish.yaml  docs-gh-pages.yml  playwright.yml  pr-check.yaml  publish.yaml  test-build-publish.yaml  test-build-publish.yaml.disabled  typescript-checks.yaml
beaker/: kernel.json  kernel.py
beaker-ts/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
beaker-ts/.config/: typedoc.js
beaker-ts/src/: beaker.ts  extension.ts  history.ts  index.ts  jupyter.ts  jupyter.ts.disabled  notebook.ts  render.ts  session.ts  util.ts
beaker-vue/: .eslintrc.js  .gitignore  README.md  babel.config.js  eslint.config.ts  exportRoutes.ts  extractRoutes.ts  index.html  lock.npmrc  orig  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.lib.json  tsconfig.node.json  vite.config.app.ts  vite.config.lib.ts  vite.config.ts  vue.config.js
beaker-vue-orig/: package.json  tsconfig.json
beaker-vue-orig/public/: __gen_index.html
beaker-vue-orig/src/: index.scss  renderers.ts
beaker-vue-orig/src/directives/: keybindings.ts
beaker-vue-orig/src/pages/: BeakerAdmin.vue  ChatInterface.vue  DevInterface.vue  NotebookInterface.vue  admin.ts  index.ts  notebook-interface.ts
beaker-vue-orig/src/util/: autocomplete.ts
beaker-vue/e2e/: vue.spec.ts
beaker-vue/public/: index.html
beaker-vue/public/themes/: beaker-common.css
beaker-vue/src/: App.vue  BeakerAdmin.vue  BeakerPlayground.vue  DevInterface.vue  NotebookInterface.vue  SingleCellPlayground.vue  admin.ts  datasources.ts  dev-interface.ts  index.scss  index.ts  main.ts  notebook.ts  preview_example.json  renderers.ts  util.ts
beaker-vue/src/assets/: beaker-common.css  index.ts  sample_code_aqs.txt
beaker-vue/src/components/: BeakerAgentQuery.vue  BeakerCell.vue  BeakerCodecell.vue  BeakerCodecellOutput.vue  BeakerContextSelection.vue  BeakerCustomMessage.vue  BeakerDevInterface.vue  BeakerExecuteAction.vue  BeakerFilePane.vue  BeakerHeader.vue  BeakerHubLogo.vue  BeakerLLMQueryCell.vue  BeakerLLMQueryEvent.vue  BeakerLogo.vue  BeakerMarkdownCell.vue  BeakerMimeBundle.vue  BeakerNotebook.vue  BeakerRawCell.vue  BeakerSession.vue  ContainedTextArea.vue  ContextTree.vue  DataSourceBrowser.vue  DecapodePreview.vue  DraggableMarker.vue  FooterDrawer.vue  HelloWorld.vue  LoggingDrawer.vue  LoggingPane.vue  NotebookControls.vue  OpenNotebookButton.vue  PreviewPane.vue  SideMenu.vue  SideMenuPanel.vue  SvgPlaceholder.vue  ThoughtsPane.vue  _index.ts_  index.ts
beaker-vue/src/lib/: common.ts  (+8 more)
beaker-vue/templates/: index.html  vue.html
beaker-vue/tests/: example.spec.ts
beaker-vue/themes/: beaker-common.css
beaker-vue/ui-lib/: NotebookControls.vue  UICell.vue  UICodeCell.vue
beaker-vue/utils/: buildSetup.ts  extractRoutes.ts  lock-check.ts  postpack.ts  prepack.ts
beaker_kernel/: __init__.py  env_keys  kernel.json  kernel.py
beaker_kernel/app/: __init__.py  base.py  dev_app.py  handlers.py  multiuser_app.py  notebook_app.py  server_app.py
beaker_kernel/builder/: beaker.py  hooks.py  templates.py  utils.py
beaker_kernel/cli/: app.py  config.py  context.py  helpers.py  main.py  project.py  running.py  server.py  subkernel.py
beaker_kernel/exporters/beaker-publication-notebook-export/: README.md  main.py  pyproject.toml
beaker_kernel/lib/: __init__.py  admin.py  agent.py  agent_tasks.py  app.py  autodiscovery.py  chat_history.py  codeset.py  config.py  context.py  extension.py  history.py  jupyter_kernel_proxy.py  llm_tasks.py  message_types.py  subkernel.py  subkernel_procedures.py  tools.py  toolset.py  types.py  utils.py  workflow.py
beaker_kernel/scripts/: beaker.py  helpers.py
beaker_kernel/server/: admin_utils.py  dev.py  main.py
beaker_kernel/service/: __init__.py  admin_utils.py  auth.py  base.py  dev.py  handlers.py  multiuser.py  notebook.py  server.py
beaker_kernel/services/: __init__.py  session.py
beaker_kernel/subkernels/: julia.py  python.py  rlang.py
beaker_kernel/util/: refactor.py
chatty/: archytas-0.2.4-py3-none-any.whl  archytas-1.0.0-py3-none-any.whl  chatty-0.1.0-py3-none-any.whl
contexts/: codesets.py  contexts.py
contexts/subkernels/: base.py  julia.py  python.py  rlang.py
contexts/toolsets/: base.py  dataset_toolset.py  decapode_creation_toolset.py  decapodes_toolset.py  mira_model_toolset.py
dev_ui/: index.css  package-lock.json
dev_ui/src/: index.ts
docs/: Dockerfile  Gemfile  README.md  _base.md  _config.yaml  _config_local.yaml  beaker_ts.md  beaker_ts_history.md  beaker_ts_notebook.md  beaker_ts_session.md  beaker_ts_util.md  contexts.md  contexts_adding.md  contexts_agent.md  contexts_context.md  contexts_custom_messages.md  contexts_preview.md  contexts_procedures.md  debugging.md  docker-compose.yml  getting_started.md  index.md  install.md  integrations.md  integrations_api.md  jupyter.md  library_locations.md  nginx.conf.txt  subkernels.md  systemd_system_beaker.service.example
docs/beaker-ts/: hierarchy.html  index.html
environments/julia/: Dockerfile  Manifest.toml  Project.toml  README.md  _Manifest.toml  install.jl
eval_app/: package.json  tsconfig.json
eval_app/app/: benchmarking.ts  index.ts  index.tsx  settings.json
lib/: jupyter_kernel_proxy.py
llmkernel/: kernel.json  kernel.py
service/: dev.py  main.py
service/dev_ui/: package-lock.json  package.json  test.ipynb  tsconfigbase.json
tests/: __init__.py  harness.py  test_agent.py  test_testharness.py  test_trust_ast.py  test_trust_linter.py  test_trust_llm.py
toolsets/: __init__.py  base.py  code_templates.py  dataset_toolset.py  mira_model_toolset.py
(+417 files in other folders)
