[tool.poetry]
name = "jupyter-llm"
version = "1.1.4"
description = ""
authors = ["Matthew Printz <matt@jataware.com>"]
license = "MIT"
readme = "README.md"
# packages = [{include = "jupyter_llm"}]

[tool.poetry.dependencies]
python = "^3.10,<3.13"
jupyterlab = "^3.6.3"
jupyterlab-server = "^2.22.1"
pandas = "1.3.3"
matplotlib = "^3.7.1"
xarray = "0.19.0"
numpy = "^1.24.3"
archytas = "^1.0"
pyzmq = "^25.1.0"
six = "^1.16.0"
tornado = "^6.3.2"
scipy = "^1.11.1"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




