[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beaker-kernel"
version = "1.2.7"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Matthew Printz", email = "matt@jataware.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "jupyterlab~=4.0",
  "jupyterlab-server>=2.22.1,<3",
  "requests>=2.24,<3",
  "pandas==1.3.3",
  "matplotlib~=3.7.1",
  "xarray==0.19.0",
  "numpy~=1.24.3",
  "archytas~=1.1,>=1.1.1",
  "pyzmq~=25.1.0",
  "six~=1.16.0",
  "tornado~=6.3.2",
  "scipy~=1.11.1",
  "jinja2~=3.1.2",
  "watchdog~=3.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
  "beaker_kernel",
  "beaker_kernel/server/dev_ui/build/*",
]
artifacts = [
  "beaker_kernel/server/dev_ui/build/*",
]


# Used to call hatch_build.py
[tool.hatch.build.hooks.custom]

# Copies the files created in the custom action
[tool.hatch.build.targets.wheel.shared-data]

[project.urls]
Documentation = "https://github.com/unknown/beaker-kernel#readme"
Issues = "https://github.com/unknown/beaker-kernel/issues"
Source = "https://github.com/unknown/beaker-kernel"

[tool.hatch.version]
path = "beaker_kernel/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:beaker_kernel tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["beaker_kernel"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["beaker_kernel", "tests"]
branch = true
parallel = true
omit = [
  "beaker_kernel/__about__.py",
]

[tool.coverage.paths]
beaker_kernel = ["beaker_kernel"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
