[project]
name = "beaker-publication-notebook-export"
version = "0.1.0"
description = "Jupyter exporter for nbconver for beaker-kernel notebooks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nbconvert>=7.16.6",
    "archytas"
]

[project.entry-points."nbconvert.exporters"]
publication = "main:PublicationExporter"
